# nbn-gpt

./: README.md  datasets.py  download.py  eval_pretrain.py  generate_stories.py  main_finetune.py  main_grpo.py  main_pretrain.py  main_rlhf.py  models.py  muon.py  pyproject.toml  requirements.txt  testing.py  tokenizers.py  utils.py
data/: baselines.py  hellaswag.py  prepare_all_ds.sh  prepare_creepypasta.py  prepare_fineweb.py
scripts/: finetune_single.sh  pretrain_distributed.sh  pretrain_single.sh  rlfh_single.sh
