[project]
name = "nbn-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.35.3",
    "matplotlib>=3.10.7",
    "openai>=2.6.0",
    "reportlab>=4.4.4",
    "tiktoken>=0.12.0",
    "wandb>=0.22.2",
]
